<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/common_google_signin_btn_icon_light_normal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        style="@style/area_layout_content"
        android:layout_width="match_parent"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dialog_add_role_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:background="@drawable/shape_gray_border_text"
                android:text="@string/cancel"
                android:textColor="@color/color_blue"
                android:textSize="16sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/edt_dialog_add_role_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_amount"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:paddingHorizontal="5dp"
            android:paddingVertical="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <Button
                android:id="@+id/btn_dialog_add_role_add"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:background="@drawable/shape_gray_border_text"
                android:text="@string/add"
                android:textColor="@color/color_blue" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>