<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/color_grey_background"
    android:layout_height="match_parent"
    tools:context=".Activity.NhapHangActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:focusable="true">

        <include layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            style="@style/area_layout_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:gravity="center"
                        android:orientation="vertical">


                        <androidx.cardview.widget.CardView
                            android:layout_width="150dp"
                            app:cardCornerRadius="12dp"
                            android:layout_height="120dp">

                            <ImageView
                                android:id="@+id/imgHH"
                                android:layout_width="match_parent"
                                android:src="@drawable/ic_picture_blue_48"
                                android:layout_height="match_parent"/>
                        </androidx.cardview.widget.CardView>


                        <Button
                            android:id="@+id/btnCH"
                            android:layout_width="wrap_content"
                            android:layout_height="42dp"
                            android:text="@string/CH"/>

                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="10dp"
                        android:layout_marginTop="20sp"
                        android:orientation="vertical">


                        <!-- Tên Sản Phẩm  -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/name_of_product"
                                android:layout_marginBottom="5dp"
                                android:textColor="@color/color_black"
                                android:textSize="20sp"/>

                            <EditText
                                android:id="@+id/edtTenhang"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:imeOptions="actionNext"
                                android:inputType="text"
                                android:nextFocusDown="@+id/edt_activity_new_product_unit_product"
                                android:maxLines="1"
                                android:drawableLeft="@drawable/ic_box_color_24"
                                android:drawablePadding="3dp"
                                android:background="@drawable/state_background_text_box_white"
                                android:hint="@string/enter_name_of_product"/>

                        </LinearLayout>


                        <!-- Đơn vi tính -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/unit"
                                android:layout_marginBottom="5dp"
                                android:textColor="@color/color_black"
                                android:textSize="20sp"/>

                            <EditText
                                android:id="@+id/edtDonVi"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:imeOptions="actionNext"
                                android:inputType="text"
                                android:nextFocusDown="@+id/edt_activity_new_product_number"
                                android:drawableLeft="@drawable/ic_unit_color_24"
                                android:drawablePadding="3dp"
                                android:background="@drawable/state_background_text_box_white"
                                android:hint="@string/enter_unit"/>

                        </LinearLayout>


                        <!-- Số lượng -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/number"
                                android:layout_marginBottom="5dp"
                                android:textColor="@color/color_black"
                                android:textSize="20sp"/>

                            <EditText
                                android:id="@+id/edtSoLuong"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:imeOptions="actionNext"
                                android:inputType="number"
                                android:nextFocusDown="@+id/edt_activity_new_product_price"
                                android:maxLines="1"
                                android:drawableLeft="@drawable/ic_number_color_24"
                                android:drawablePadding="3dp"
                                android:background="@drawable/state_background_text_box_white"
                                android:hint="@string/enter_amount"/>

                        </LinearLayout>




                        <!-- Button -->

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="45dp"
                            android:orientation="horizontal"
                            android:gravity="center">

                            <Button
                                android:id="@+id/btnThem"
                                android:layout_width="wrap_content"
                                android:layout_height="42dp"
                                android:text="@string/save"/>
                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>




    </LinearLayout>

</RelativeLayout>