<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.denzcoskun.imageslider.ImageSlider
        android:layout_width="match_parent"
        android:layout_margin="30px"
        android:layout_height="150dp"
        android:id="@+id/slider"
        app:placeholder="@drawable/ic_add_blue_24"
        app:error_image="@drawable/ic_add_blue_24"
        app:auto_cycle="true"
        app:delay="0"
        app:period="5000"
        app:corner_radius="20">

    </com.denzcoskun.imageslider.ImageSlider>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="00px">
        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/wrap_wrap_center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/btnaLlocation"
                    style="@style/w_wr_centerh_vertical">


                    <RelativeLayout
                        style="@style/styleButton_catelogy"
                        android:background="@drawable/card1"
                        android:elevation="8dp">


                        <ImageView
                            android:id="@+id/imgGiaovien"
                            style="@style/imade_main"
                            android:src="@drawable/ic_sheet_color_32" />

                    </RelativeLayout>

                    <TextView
                        style="@style/w_wr_text_catelogy"
                        android:text="@string/allocation" />
                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                style="@style/wrap_wrap_center"
                android:orientation="horizontal">


                <LinearLayout
                    android:id="@+id/btnStatistics"
                    style="@style/w_wr_centerh_vertical">


                    <RelativeLayout
                        style="@style/styleButton_catelogy"
                        android:background="@drawable/card1"
                        android:elevation="8dp">


                        <ImageView
                            android:id="@+id/imgPCB"
                            style="@style/imade_main"
                            android:src="@drawable/ic_statistic_color_32" />

                    </RelativeLayout>

                    <TextView
                        style="@style/w_wr_text_catelogy"
                        android:text="@string/statistic" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/wrap_wrap_center"
                android:orientation="horizontal">


                <LinearLayout
                    android:id="@+id/btnStationery"
                    style="@style/w_wr_centerh_vertical">


                    <RelativeLayout
                        style="@style/styleButton_catelogy"
                        android:background="@drawable/card1"
                        android:elevation="8dp">


                        <ImageView
                            android:id="@+id/img1"
                            style="@style/imade_main"
                            android:src="@drawable/ic_price_color_24" />

                    </RelativeLayout>

                    <TextView
                        style="@style/w_wr_text_catelogy"
                        android:text="@string/stationery" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                style="@style/wrap_wrap_center"
                android:orientation="horizontal">



                <LinearLayout
                    android:id="@+id/btnRole"
                    style="@style/w_wr_centerh_vertical">


                    <RelativeLayout
                        style="@style/styleButton_catelogy"
                        android:background="@drawable/card1"
                        android:elevation="8dp">


                        <ImageView
                            android:id="@+id/img2"
                            style="@style/imade_main"
                            android:src="@drawable/ic_task_color_32" />

                    </RelativeLayout>

                    <TextView
                        style="@style/w_wr_text_catelogy"
                        android:text="@string/role" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>