<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Fragment.ThongKeTungKhoFragment">
    <LinearLayout
        style="@style/area_layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal">


                    <!-- Price -->
                    <LinearLayout
                        android:id="@+id/llvbottom"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/shape_background_statistical">

                            <ImageView
                                android:layout_width="42dp"
                                android:layout_height="42dp"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="5dp"
                                android:scaleType="centerInside"
                                android:src="@drawable/ic_money_32" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_marginLeft="5dp"
                                android:layout_marginBottom="5dp"
                                android:text="@string/total_price"
                                android:textColor="@color/color_orange"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/tv_total_price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_marginTop="5dp"
                                android:layout_marginRight="5dp"
                                android:text="0"
                                android:textColor="@color/color_black"
                                android:textSize="18sp" />

                        </RelativeLayout>


                    </LinearLayout>

                    <!-- Total -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginTop="5dp"
                        android:layout_below="@+id/llvbottom"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/shape_background_statistical">

                            <ImageView
                                android:layout_width="42dp"
                                android:layout_height="42dp"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="5dp"
                                android:scaleType="centerInside"
                                android:src="@drawable/ic_calculator_32" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_marginLeft="5dp"
                                android:layout_marginBottom="5dp"
                                android:text="@string/dientichdathue"
                                android:textColor="@color/color_purple"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/tv_dientichdathue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_marginTop="5dp"
                                android:layout_marginRight="5dp"
                                android:text="0"
                                android:textColor="@color/color_black"
                                android:textSize="18sp" />

                        </RelativeLayout>


                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/list"
                    android:textColor="@color/color_black"
                    android:textSize="24sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcdanhsachdanghopdong"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/row_item_thongkekho" />

                    <LinearLayout
                        android:id="@+id/lnl_fragment_stationary_manager_notify_emplty"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/no_product"
                            android:textColor="@color/color_blue"
                            android:textSize="22sp" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</RelativeLayout>